gfx/layers/wr/StackingContextHelper.h
@@ -122,7 +122,6 @@ class MOZ_RAII StackingContextHelper {
   Maybe<nsDisplayTransform*> mDeferredTransformItem;
   Maybe<gfx::Matrix4x4> mDeferredAncestorTransform;
 
-  bool mIsPreserve3D;
   bool mRasterizeLocally;
 };
 
